# GenerateBinaryFileToAscii

./: CMakeLists.txt  README.md
finalSolution/: Generate  README.md  generator.c  testc.ini
finalSolution/PSS_Solution/: RandomValues.txt  person.h  write.c
